{
    "name": "RaidControls",
    "maps": [
        {
            "name": "Touch",
            "id": "df89c0d0-acbe-40b2-9f6d-236a22c6bff5",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "e2ee058d-4388-4d12-8364-d6bf0792482e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowTap",
                    "type": "Button",
                    "id": "5d34cc79-3a60-4f3c-b250-63af1751d7a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "SlowTap",
                    "initialStateCheck": false
                },
                {
                    "name": "TapPosition",
                    "type": "PassThrough",
                    "id": "d9558e75-e0d7-4475-96f9-2a3d9af0ffe2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b28a7633-c7fe-4656-a4f2-c6c6ee48ec1f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55135b00-fdc3-48e9-8fd4-fccb17da55ea",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlowTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4537a07-5801-4546-b000-7ac74a50be1b",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}